# ChangeLog for dev-perl/ExtUtils-XSpp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-XSpp/ChangeLog,v 1.26 2012/12/28 20:14:51 tove Exp $

*ExtUtils-XSpp-0.160.300 (28 Dec 2012)

  28 Dec 2012; Torsten Veller <tove@gentoo.org>
  +ExtUtils-XSpp-0.160.300.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -ExtUtils-XSpp-0.11.ebuild:
  Cleanup

  11 Dec 2011; Markus Meier <maekke@gentoo.org> ExtUtils-XSpp-0.160.200.ebuild:
  x86 stable, bug #388765

  04 Dec 2011; Markos Chandras <hwoarang@gentoo.org>
  ExtUtils-XSpp-0.160.200.ebuild:
  Stable on amd64 wrt bug #388765

  30 Jul 2011; Torsten Veller <tove@gentoo.org>
  -ExtUtils-XSpp-0.160.100.ebuild:
  Cleanup

*ExtUtils-XSpp-0.160.200 (04 Jun 2011)

  04 Jun 2011; Torsten Veller <tove@gentoo.org>
  +ExtUtils-XSpp-0.160.200.ebuild:
  Version bump

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -ExtUtils-XSpp-0.15.ebuild,
  -ExtUtils-XSpp-0.160.0.ebuild:
  Cleanup

*ExtUtils-XSpp-0.160.100 (13 Mar 2011)

  13 Mar 2011; Torsten Veller <tove@gentoo.org>
  +ExtUtils-XSpp-0.160.100.ebuild:
  Version bump

*ExtUtils-XSpp-0.160.0 (12 Mar 2011)

  12 Mar 2011; Torsten Veller <tove@gentoo.org> +ExtUtils-XSpp-0.160.0.ebuild:
  Version bump

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -ExtUtils-XSpp-0.12.ebuild,
  -ExtUtils-XSpp-0.14.ebuild:
  Cleanup

*ExtUtils-XSpp-0.15 (17 Aug 2010)

  17 Aug 2010; Torsten Veller <tove@gentoo.org> +ExtUtils-XSpp-0.15.ebuild:
  Version bump

*ExtUtils-XSpp-0.14 (22 Jul 2010)

  22 Jul 2010; Torsten Veller <tove@gentoo.org> +ExtUtils-XSpp-0.14.ebuild:
  Version bump

*ExtUtils-XSpp-0.12 (15 Jul 2010)

  15 Jul 2010; Torsten Veller <tove@gentoo.org> +ExtUtils-XSpp-0.12.ebuild:
  Version bump

  15 Jun 2010; Torsten Veller <tove@gentoo.org> ExtUtils-XSpp-0.11.ebuild:
  Stable on amd64 and x86 (#323529)
