@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST ExtUtils-XSpp-0.1602.tar.gz 173721 SHA256 3f54ebc00ee663fb014db9970ce789e1a4152caa5ef96212c567678339a3f78f SHA512 2a8dc7bbd9ad7e80217222bda3b6373d7b66c0a83a325bbcfb5b9306178397964e7f606a4b86cfa4032ba7444c370ea077d8573feb0b2dec8f558c5ed1ba1519 WHIRLPOOL bacd27a340f5ed0fae580e36ec008d4f1e4a876d536dd3f1b6b75e8f6355392b1a663798b2b7d746c149529bf98608dd2dc31b5c4dd665aa81aba303fb4eff82
 DIST ExtUtils-XSpp-0.1603.tar.gz 173271 SHA256 45f35ee240a4bfd76c2eed4bfcc623a0d23d32b8100f69e27fe5c7eca8712cab SHA512 fa8d2035de7ae6e456056c4817861854796434c7cc8664114a9f02c91aacd26a614c159cb750228eba757b78758e0e439e74e5ec33fcd675b8a0f4dccf4f597b WHIRLPOOL ed4c420f4f0af4921d290bd04cb9ec2cd87cff89ab2d6a638bd902cc8d18fb7ecd6430a02ac13f348c3655735fd7c2a71caf705289b3ba6f22ddc3650188355d
+DIST ExtUtils-XSpp-0.1700.tar.gz 175808 SHA256 355305acb5285e60d40471d30555944ca8327967e13bfbe24e257ed9563a57d7 SHA512 12490302e98a499bbc14849a5879087d9d88feb64dedd2d9c79b047fadec2171d5029f1b2e1ffe68e16fb07b1e22dd3d443dead0a6bf1ddf504600cbde92128a WHIRLPOOL 89ed01074926682d3281bca2346e21f1991ef23ea83632d15c787bdf7a33aeb856c4d537497f8e3c3c9d3edfcba727ae97856abeffa03f0e68f0e1ecd3f81849
 EBUILD ExtUtils-XSpp-0.160.200.ebuild 534 SHA256 4df2d5be48fa0eb03bf7b6c1d10fe10ef90719acb821fb9dec0067bc456277e6 SHA512 696fee002d28538311af166788d2a01e6a38380f9971ef86a6e2a3869de4d6fe7fd51efe4937645775da19a95304007f7d61d6e9a3ea255a411cc796e3076ff5 WHIRLPOOL 25b9714feea4420e801e7187be6b7f59f0ce8088a9d05b528b718e17fde11ba3cf90791cab2346024e81dd214618de834ee05d733a6c6d91d34fe5d1aee0a7c5
 EBUILD ExtUtils-XSpp-0.160.300.ebuild 554 SHA256 48df6ad17359b46cceb323ba1b139276e33b961557e022fe28f51be1444b86c4 SHA512 6a6319b3d7ff285f4bddeea8649c1c718979106fdf11e48d8e83b095960f6e4d51d1e9b12dc6652c343166651693fe2cbaa799ce62db605c8ab989d9719136d6 WHIRLPOOL 9c79284d8ff502cc04bd27ee5a351a30849f02b23b558338a9ebd090b69033d816591a9242aeed7046d2e55c303e053e92deb6f3011d076b7c4e8d585c2cbf83
-MISC ChangeLog 3410 SHA256 4a90907337d5424f04ee6bc1962ca0bd5a2d4cabd0443ae1a90272b080b70ca2 SHA512 78dc10cf8febb77e24a60c70951906a0b8109cf1ca922c49163249822f31ff03daa15eafe0d0e4f17c69d67b3d89a4e66f3a591f4373e536c7c5770555e27765 WHIRLPOOL 45de77d91a6fa7f3c73d336f208eaa939b605a9873b23e7688d375980b8c94bca062c5c569b7a8bd2edf49c52fb2325f85415fde1bde0725f34dbdc9df521441
+EBUILD ExtUtils-XSpp-0.170.0.ebuild 552 SHA256 186cdcb8342750c0cec4664b56d58f003c77057ca11d15cd3c5571074f183a13 SHA512 31b67178c72179ec7cf8f3066f379f7497958676c65d1062af7aa598776cfe9757111be4431e1f22bf099a82ffea52a240c205ebf72123597924415f4431c1b9 WHIRLPOOL 134d92e898bd9e5f8ce16179765305090423fc5bf000ed3f545e2ae377601f6da80c56d963418166d95a27a28057d93d24e557911de47ac25258b4f4f2149e6e
+MISC ChangeLog 3543 SHA256 fb364583a10b5a0cc24986e3bb2aac92e310d7beb04ef52ae0a748720f100d03 SHA512 a8a2ff840eaddf6928195a147daacf7b0bb0d796a84dbc874e3bba463bff6682811d4e75d3307f96895923c7aee1fa19922d9447073a55b4e913095f790af322 WHIRLPOOL 1d56d5a7c6171d8b082a50f594b78ccecc39de72eeba67ca2964ee2aadf37001c41694c8980cd8ca41149842f9938ea9e7290f62432f87aed708597a07a615de
 MISC metadata.xml 2945 SHA256 8d4bbe10dc91535da5e78cf60829be5326760072c39ae559c55efd5f13aa5a89 SHA512 c5de1bab62394a4e19a1774f6b4ee743410a935ef22e4a3b22a1224bb8933e367d05f07abcb9f9f12e8a0b0b71058320c3011dfc422afdefaae4c95983d0741e WHIRLPOOL 44f1bcdf1b661e17b4654c6d186940d09cab888710ee3f1a614bdc3defc91136c41a790630de94d38c6f77125a5ab4ac4e39b967212d453ea894d4535ec19bd7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDd/bwACgkQV3J2n04EauwmugCgqJ9gLqZV3kt6abDRpttJywt+
-4WQAn1ddEdq9z7wWE6pXVtpqsShgBUj2
-=U+rF
+iEYEAREIAAYFAlEXugcACgkQV3J2n04EauyndQCeOxQ8TPc5o04PwlbKnenrcS6t
+V9UAoMg6RBYBINPm0xbOb/9b2V6OcS1e
+=Yl0A
 -----END PGP SIGNATURE-----
