@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST GStreamer-0.17.tar.gz 68761 SHA256 49195018f5d7ca60379f8b5ede0afe344ea029ac00f206adf63330094dae66d4 SHA512 38a0079889ce35494eaaa9185be3ad2eee152443b00f37b4ef47168c0abe17c463a0a879600328a8b10d76e2f85bdaa69100e51fe08dab7be4b6cd485fd7a8c0 WHIRLPOOL e98fd0c465bde9fc73ae44969b2d68874df7027d61a7d15a09b69562659e766280b6b0ae32eb45e1250d981cd1179b0bf89d43c7be151bfff648ad59d393b55e
+DIST GStreamer-0.18.tar.gz 69782 SHA256 de3482441577c07cd6b65ec3b87b49dbcd8661af53ca260110f0e1cc1d8ae6b9 SHA512 277edae589e1e21146efac87d2e78c2c9989fc5e3732d5fd8bc0102c63db9591beaeb3af9e12e689607ba5f8a0f5a448fbe8ba2e8732509262f1560c6d9ed2e3 WHIRLPOOL e13369cac1c9cfc78f1eef7d0d66f94fa4eb75e094ae8ca53c5f7e985635ab4b69a9d87995b3d8ed4882918fbb6759444bf381186c7f239a3e42c5ae7aa43c5a
 EBUILD GStreamer-0.170.0.ebuild 586 SHA256 a15790aa3fd30b4ed79f06136b9bd29a6307e0574d61e097464515403fcddc94 SHA512 87030ee48096a3da22c7610b0e639cf2fedfd589b050d0ca54cf51411ecc4298adbb4bea7810bbcf260062072f1d57bd6d33bbac20827be27ce8c7ed41c1542a WHIRLPOOL 1ee32a219d238a796e6488e36bb676fa908e8ef8675f90dea343ffd4b9e8f5b2e78f611f49a466718d8343590c916f3f2a6bc476d49f3395d1395e99a7882f1e
-MISC ChangeLog 2359 SHA256 c9c0f2fd962eeea852a7349ac00c27f327a56dcff1134e07757c66950a7bab06 SHA512 abb06084d8712b032de4cb191aceafee48b632bec571eaee721ab5eb0b34289f05850d008bc705d432cda540112617bbd81da4fe143bf4530af5416faf62f53f WHIRLPOOL c207693a9ba30c94e63ae6b0671c24b73a65882ab0df0e9e0d5ab286fba4991dc616a9f47c9a7a8b4036c6939355500e2029eaf99064b1761fb22f1d464667a7
+EBUILD GStreamer-0.180.0.ebuild 600 SHA256 b29104aff552b4819c93547f5338a7f476494bedbfb2d97ed13986551a28d476 SHA512 6b1afb912e7827908c0bfe8d8f7f76c89ab77563aab6d771e608d084e31999b8f4542813fa6ba163c9aa6c5eb4363818ff3f73316d1b6260d17ba35c64d93b83 WHIRLPOOL c144255df07e676a62ebbb85db360e63e0ea7db055001c07fe8bb3b0a73b4e777b11b22293e75ec8fdf5937bacd39666fdf1e3dd6b0e77659bf32c90b6fdff40
+MISC ChangeLog 2484 SHA256 6a0094d960508ae0b6d5623dcf36c8f0269ec07e4607e42383d8e3297fb84b30 SHA512 b4ac4ed95227897c0f731c5bdd45aaf8b05baff9ccf26231b6857c19dd676616290b937a90ec334b976e46fb25c671ee4d752c4f98d92933c60bdac6c78dac6a WHIRLPOOL fac18cc8eb69284bd7f22d22ebf08bfc7ef1de66403527f0fe1cafbcf76a943679522fc2ca8a9cd3cfa9f1a315c4078c4ce3d13552d29dc46e63afce29f32db6
 MISC metadata.xml 353 SHA256 712dc68c93b8eeb452ace6c2bb57ecfb9554ca9f35f2796f6dcc649c7ff1c58d SHA512 61c6e2091a111d2d51b2fe52be6b79bcd1cea2a3ef6e2c61018c542c13360bd7daa351b8ba3d821ef3dcd1ce4db4f43444e1fdfb74e73be2c3f72fa46ad981ab WHIRLPOOL 54c4895f6c764279f668130c28e55cb1b540e815b43d2c43f684a49f88784e98fcc28e7ad1ab9c62b2c3da3e688ae1590deae1d0eb8f6154cee7be216b00a4b8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlEXu9sACgkQV3J2n04Eauz2TQCePa5JtBC4Beg+QantLGMzmOHN
+AXwAn2zX0v1VdXRChSuTgefYE+iqqKum
+=v6DL
+-----END PGP SIGNATURE-----
