@@ -1,4 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+AUX frozen-bubble-2.2.1_beta1-Werror.patch 730 SHA256 bcbab0800ab1ec809ef3170db338efcc1f7392adfb02a2d917dc69aca862c60f SHA512 f415e02ce8a048922e12172ad4e8ac7a36f0d9daed59b15f7781eba233a1e7de6cf5e0a23311ad10294cf1a481af6ea2f92fa039dc55e7c4d9d90b8772ee9a1b WHIRLPOOL 8f42c551b7c6eb11aa25cf5771a88f5fe94896b53a1085d82ff9e7b7dd68afe0ea5078276f871998cd1fbc3c7f007f49c9d0461780ffc9fb52d6dc0a8998b762
 DIST frozen-bubble-2.2.1-beta1.tar.bz2 22424798 SHA256 c5be403ccb71543dab1aeb7d5ae311e18693f79937fb9159469cdad0abf18ac4 SHA512 a5d1432195bc41b2823678986fe71223acf5c740636a871758e6337072c74a84bca7aa7088af7b299586e4e261521ae0b3341805692ab684d93e85f52174b1ac WHIRLPOOL 7b2782c8fe4a1dc8e77d5eba0d3e1cae12435e82d2c623ca0de6d5c91822bf07855a6f643b9f711eccba7232e7c80872add3296ee1915da518a154340fcd92dc
-EBUILD frozen-bubble-2.2.1_beta1.ebuild 1858 SHA256 720ee081160fc1583a48865b588f7b3f3e4ac51ab126b6804bbb07e3cfacbd48 SHA512 ba72c2d84ddc74976be59c7c4f8e4b93e772ecd82bafd878f9a01ba6315a190efc33f7f8e41b1b62ef68cd5d5cf6e56e6931ab4b8b105697ea112afcc25db94c WHIRLPOOL 5e5fc1b9695acbc63fb76e8e7564a68c063b6d3097c6124bdedaa213a1f0f3f898c06e71bd8faff33e12575c4477a0955e1f2faab1c8df0054b64f7dd81923df
-MISC ChangeLog 10294 SHA256 a40f7a54552789bd91b9ac89793bad44f3e691f48f6a0ea11d93ac7b2a71da17 SHA512 35bb17625d31b8b065a15d45615bd61f981c635bc0b95852967aec255ddd817ec8831a1caa0711d4a6f2a2dd4406cb1613a350717c9d1a1c27eb4ced80fc742d WHIRLPOOL 390508293c9ef2fea6042535a22ec2033f662ec7caf2cbb341b5d0541d3862e07b171e727b98f65d5cb317329fe664783ed7804142b964640b036f1ee943f81f
+EBUILD frozen-bubble-2.2.1_beta1.ebuild 1941 SHA256 4c4a8d34f5e5d8e525131814a3a91576b695dd1d049f864503e5eb0e67bbe546 SHA512 e65b556c943238b3ba701614b33ca8f4978f58687cf38a7f6c4e2c213f044c4e5346e77ed58707e720dd08eeae840024fcd047472b95d381e5ea2f52ea3fa858 WHIRLPOOL 57921e77c50a6c665871e9305a7186ea9e07d38f83c2c629ded293b7b49412376fdb6e6195c8f5b1762c2f4158e5382a42e739bf0ba3971ca8215f9afbcf283d
+MISC ChangeLog 10458 SHA256 9a08d73632d7a4a340805634ea77fc72dd3eb5af2204729027cf7fea37245c51 SHA512 eeaddcf39dbd097350d3a471bd5e08db3bce77d6aef59561ac81b7b6df79d662a2474d2fcfcd4dea716cf208cfebcc78e1612efa816cea237b18551d7ae62121 WHIRLPOOL d707daabc64b34863669d1e59e079f3873d98e0c80a88ceace3d086d6a152dbfe4e3f49f603cd4f2bdb09fca38ae2cf007d8e979476a5e105adde76febcecf6f
 MISC metadata.xml 449 SHA256 63337ec457363a86ff999264ec10ee614f5156160a57371d278122c167470602 SHA512 146fa26744a06831370e3633597cf3921a09828266469fd8aee04552160bfbd6fb1272a49c008ce3fb55006a747b503213728adc6c5e1d85a1405bbcce998ac8 WHIRLPOOL 18a05a1b222cc3aff82d830dbf8e87ef8b41edf4bcea94b66b0538aad29a0015fcb6efb882d7d1c07bf1af5208e9d28366910525c8ace3641a9d748415496170
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJRF7kuAAoJEFpvPKfnPDWznNUH/A87P3K6BWjbEA7yBxfaZeDM
+fAA+gxKpTs92p+opuzbouqvJr2E/wjKGnyY0eGra8z2kKMkf9b+0h1JLxi8gxgrk
+3YsL7yzivxNIhkECxLqyPIfbI2epxn1LlguYbml8TNzLJbKuUWmtBu1e2kbYBQrv
+mnd9/0kA9g7MP3aLB2+C3HkHA30OexCVzRkD3SzAfZp6Zfzd/e72O3fQmfYRvJAS
+Mr4DIof0HGY2znt35lePKpXJgd3PyMxFZVeBkwa9rwF++A/neegB8HZ1DvJmMrcL
+KddI8/0b6moaefYaRXfotUb/OZ9pEwIbqklNL963AyYWNbjCoufHv7LV1BN5oSo=
+=ftcT
+-----END PGP SIGNATURE-----
