@@ -1,6 +1,11 @@
 # ChangeLog for games-arcade/frozen-bubble
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.51 2012/10/22 04:09:37 mr_bones_ Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-arcade/frozen-bubble/ChangeLog,v 1.52 2013/02/10 15:13:50 hasufell Exp $
+
+  10 Feb 2013; Julian Ospald <hasufell@gentoo.org>
+  frozen-bubble-2.2.1_beta1.ebuild,
+  +files/frozen-bubble-2.2.1_beta1-Werror.patch:
+  remove Werror wrt #456654
 
   22 Oct 2012; Michael Sterrett <mr_bones_@gentoo.org>
   frozen-bubble-2.2.1_beta1.ebuild:
