@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/ExtUtils-XSpp
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-XSpp/ChangeLog,v 1.26 2012/12/28 20:14:51 tove Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-XSpp/ChangeLog,v 1.27 2013/02/10 15:17:26 tove Exp $
+
+*ExtUtils-XSpp-0.170.0 (10 Feb 2013)
+
+  10 Feb 2013; Torsten Veller <tove@gentoo.org> +ExtUtils-XSpp-0.170.0.ebuild:
+  Version bump
 
 *ExtUtils-XSpp-0.160.300 (28 Dec 2012)
 
